@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2015 the original author or authors.
+ * Copyright 2012-2016 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -64,12 +64,12 @@ public class MetricRegistryMetricReaderTests {
 
 			@Override
 			public Number getValue() {
-				return new Integer(5);
+				return Integer.valueOf(5);
 			}
 
 		});
 		Metric<Integer> metric = (Metric<Integer>) this.metricReader.findOne("test");
-		assertThat(metric.getValue(), equalTo(new Integer(5)));
+		assertThat(metric.getValue(), equalTo(Integer.valueOf(5)));
 		this.metricRegistry.remove("test");
 		assertThat(this.metricReader.findOne("test"), is(nullValue()));
 	}
